make sure badge exporting is hidden behind feature flag (feature: badges).

--- a/src/main/resources/scss/_window-treatments.scss
+++ b/src/main/resources/scss/_window-treatments.scss
@@ -384,6 +384,7 @@
     	font: normal 600 14px/42px $font;
     	position: relative;
     	margin-top: 10px; 
+    	overflow: hidden;
 
     	&::after {
     		content: '';
